//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

package dxos.credentials.auth;

import "./keys.proto";

//
// The payload for a SignedMessage sent during handshake for replication authentication.
//
message Auth {
  PublicKey partyKey = 1;         // The publicKey of the target Party for these credentials.
  PublicKey deviceKey = 2;        // The publicKey of the authenticating Device.
  PublicKey identityKey = 3;      // The publicKey of the authenticating Identity.
  PublicKey feedKey = 4;          // The publicKey of the authenticating Identity.
}
